增加帖子业务接口
